clib/libfli.h


/**
 * @brief An opaque handle used by library functions to refer to FLI hardware.
 * 
 */
typedef long flidev_t;

/**
   Type used to determine which temperature channel to read.  Valid
   channel types are \texttt{FLI_TEMPERATURE_INTERNAL} and
   \texttt{FLI_TEMPERATURE_EXTERNAL}.

   @see FLIReadTemperature
*/
typedef long flichannel_t;


#define FLI_TEMPERATURE_INTERNAL (0x0000)
#define FLI_TEMPERATURE_EXTERNAL (0x0001)

typedef long flimode_t;

typedef long flitdirate_t;

typedef long flitdiflags_t;
#      define LIBFLIAPI long __stdcall
/* The module definition file precludes using __declspec(dllexport) */
/*#        define LIBFLIAPI __declspec(dllexport) long __stdcall    */
#      define LIBFLIAPI long __stdcall
#        define LIBFLIAPI __declspec(dllimport) long __stdcall
#    define LIBFLIAPI long


/**
 * @brief Retrieve temperature from a focuser device.
 * 
 * @param dev Focuser handle.
 * @param channel Temperature source. Valid values are
 * - `FLI_TEMPERATURE_INTERNAL`: Internal temperature sensor,
 * - `FLI_TEMPERATURE_EXTERNAL`: External temperature sensor.
 * @param temperature Temperature in degrees Celsius.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIReadTemperature(flidev_t dev, flichannel_t channel, double *temperature);

LIBFLIAPI FLIGetFocuserExtent(flidev_t dev, long *extent);

LIBFLIAPI FLIUsbBulkIO(flidev_t dev, int ep, void *buf, long *len);

LIBFLIAPI FLIGetDeviceStatus(flidev_t dev, long *status);

LIBFLIAPI FLIGetCameraModeString(flidev_t dev, flimode_t mode_index, char *mode_string, size_t siz);

LIBFLIAPI FLIGetCameraMode(flidev_t dev, flimode_t *mode_index);

LIBFLIAPI FLISetCameraMode(flidev_t dev, flimode_t mode_index);

LIBFLIAPI FLIHomeDevice(flidev_t dev);


/**
 * @brief NOT IMPLEMENTED.
 * 
 * @param dev 
 * @param buff 
 * @param buffsize 
 * @param bytesgrabbed 
 * @return LIBFLIAPI 
 */
LIBFLIAPI FLIGrabFrame(flidev_t dev, void* buff, size_t buffsize, size_t* bytesgrabbed);

LIBFLIAPI FLISetTDI(flidev_t dev, flitdirate_t tdi_rate, flitdiflags_t flags);


/**
 * @brief Grab a video frame from a camera device. This function grabs a video frame from the camera device `dev` and stores it in the buffer pointed to by `buff`. The size of the buffer pointed to by `buff` must be at least `size` bytes long.
 * 
 * @param dev Camera handle.
 * @param buff Buffer where the video frame will be stored.
 * @param size Size of the buffer in bytes.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIGrabVideoFrame(flidev_t dev, void *buff, size_t size);


/**
 * @brief Stop video mode for a camera device. This function stops video mode for the camera device `dev`.
 * 
 * @param dev Camera handle.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIStopVideoMode(flidev_t dev);


/**
 * @brief Start video mode for a camera device. This function starts video mode for the camera device `dev`.
 * 
 * @param dev Camera handle.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIStartVideoMode(flidev_t dev);


/**
 * @brief Get the serial number of a device. This function copies up to `len - 1` characters of the serial number of the device to the buffer pointed to by `serial`. The string is null-terminated.
 * 
 * @param dev Device handle.
 * @param serial Pointer to a character buffer where the serial number will be stored.
 * @param len Size of the buffer in bytes.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIGetSerialString(flidev_t dev, char* serial, size_t len);


/**
 * @brief End an exposure for a given camera. This function causes the 
 * exposure to end and image download begins immediately.
 * 
 * @param dev Camera handle.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIEndExposure(flidev_t dev);


/**
 * @brief Trigger an exposure for a given camera. This function triggers 
 * an exposure for the camera device `dev` waiting for an external
 * trigger signal.
 * 
 * @param dev Camera handle.
 * @return LIBFLIAPI 
 */
LIBFLIAPI FLITriggerExposure(flidev_t dev);


/**
 * @brief Get the current fan speed of a given device.
 * 
 * @param dev Device handle.
 * @param fan_speed Fan speed in RPM.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLISetFanSpeed(flidev_t dev, long fan_speed);

LIBFLIAPI FLISetVerticalTableEntry(flidev_t dev, long index, long height, long bin, long mode);

LIBFLIAPI FLIGetVerticalTableEntry(flidev_t dev, long index, long *height, long *bin, long *mode);


/**
 * @brief Get the readout dimensions of a given device. This function returns the readout dimensions of the device in the variables pointed to by `width`, `hoffset`, `hbin`, `height`, `voffset`, and `vbin`.
 * 
 * @param dev Camera handle.
 * @param width Width of the readout area.
 * @param hoffset Horizontal offset of the readout area.
 * @param hbin Horizontal binning of the readout area.
 * @param height Height of the readout area.
 * @param voffset Vertical offset of the readout area.
 * @param vbin Vertical binning of the readout area.
 * @return LIBFLIAPI Zero on success, non-zero error code on failure.
 */
LIBFLIAPI FLIGetReadoutDimensions(flidev_t dev, long *width, long *hoffset, long *hbin, long *height, long *voffset, long *vbin);

LIBFLIAPI FLIEnableVerticalTable(flidev_t dev, long width, long offset, long flags);

LIBFLIAPI FLIReadUserEEPROM(flidev_t dev, long loc, long address, long length, void *rbuf);

LIBFLIAPI FLIWriteUserEEPROM(flidev_t dev, long loc, long address, long length, void *wbuf);