src/fli_ffi.rs

extern "C" {
    #[doc = " @brief Retrieve temperature from a focuser device.\n\n @param dev Focuser handle.\n @param channel Temperature source. Valid values are\n - `FLI_TEMPERATURE_INTERNAL`: Internal temperature sensor,\n - `FLI_TEMPERATURE_EXTERNAL`: External temperature sensor.\n @param temperature Temperature in degrees Celsius.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIReadTemperature(
        dev: flidev_t,
        channel: flichannel_t,
        temperature: *mut f64,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetFocuserExtent(
        dev: flidev_t,
        extent: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIUsbBulkIO(
        dev: flidev_t,
        ep: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_void,
        len: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetDeviceStatus(
        dev: flidev_t,
        status: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetCameraModeString(
        dev: flidev_t,
        mode_index: flimode_t,
        mode_string: *mut ::std::os::raw::c_char,
        siz: usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetCameraMode(dev: flidev_t, mode_index: *mut flimode_t) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLISetCameraMode(dev: flidev_t, mode_index: flimode_t) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIHomeDevice(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief NOT IMPLEMENTED.\n\n @param dev\n @param buff\n @param buffsize\n @param bytesgrabbed\n @return LIBFLIAPI"]
    pub fn FLIGrabFrame(
        dev: flidev_t,
        buff: *mut ::std::os::raw::c_void,
        buffsize: usize,
        bytesgrabbed: *mut usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLISetTDI(
        dev: flidev_t,
        tdi_rate: flitdirate_t,
        flags: flitdiflags_t,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Grab a video frame from a camera device. This function grabs a video frame from the camera device `dev` and stores it in the buffer pointed to by `buff`. The size of the buffer pointed to by `buff` must be at least `size` bytes long.\n\n @param dev Camera handle.\n @param buff Buffer where the video frame will be stored.\n @param size Size of the buffer in bytes.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGrabVideoFrame(
        dev: flidev_t,
        buff: *mut ::std::os::raw::c_void,
        size: usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Stop video mode for a camera device. This function stops video mode for the camera device `dev`.\n\n @param dev Camera handle.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIStopVideoMode(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Start video mode for a camera device. This function starts video mode for the camera device `dev`.\n\n @param dev Camera handle.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIStartVideoMode(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the serial number of a device. This function copies up to `len - 1` characters of the serial number of the device to the buffer pointed to by `serial`. The string is null-terminated.\n\n @param dev Device handle.\n @param serial Pointer to a character buffer where the serial number will be stored.\n @param len Size of the buffer in bytes.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetSerialString(
        dev: flidev_t,
        serial: *mut ::std::os::raw::c_char,
        len: usize,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief End an exposure for a given camera. This function causes the\n exposure to end and image download begins immediately.\n\n @param dev Camera handle.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIEndExposure(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Trigger an exposure for a given camera. This function triggers\n an exposure for the camera device `dev` waiting for an external\n trigger signal.\n\n @param dev Camera handle.\n @return LIBFLIAPI"]
    pub fn FLITriggerExposure(dev: flidev_t) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the current fan speed of a given device.\n\n @param dev Device handle.\n @param fan_speed Fan speed in RPM.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLISetFanSpeed(
        dev: flidev_t,
        fan_speed: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLISetVerticalTableEntry(
        dev: flidev_t,
        index: ::std::os::raw::c_long,
        height: ::std::os::raw::c_long,
        bin: ::std::os::raw::c_long,
        mode: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIGetVerticalTableEntry(
        dev: flidev_t,
        index: ::std::os::raw::c_long,
        height: *mut ::std::os::raw::c_long,
        bin: *mut ::std::os::raw::c_long,
        mode: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    #[doc = " @brief Get the readout dimensions of a given device. This function returns the readout dimensions of the device in the variables pointed to by `width`, `hoffset`, `hbin`, `height`, `voffset`, and `vbin`.\n\n @param dev Camera handle.\n @param width Width of the readout area.\n @param hoffset Horizontal offset of the readout area.\n @param hbin Horizontal binning of the readout area.\n @param height Height of the readout area.\n @param voffset Vertical offset of the readout area.\n @param vbin Vertical binning of the readout area.\n @return LIBFLIAPI Zero on success, non-zero error code on failure."]
    pub fn FLIGetReadoutDimensions(
        dev: flidev_t,
        width: *mut ::std::os::raw::c_long,
        hoffset: *mut ::std::os::raw::c_long,
        hbin: *mut ::std::os::raw::c_long,
        height: *mut ::std::os::raw::c_long,
        voffset: *mut ::std::os::raw::c_long,
        vbin: *mut ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIEnableVerticalTable(
        dev: flidev_t,
        width: ::std::os::raw::c_long,
        offset: ::std::os::raw::c_long,
        flags: ::std::os::raw::c_long,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIReadUserEEPROM(
        dev: flidev_t,
        loc: ::std::os::raw::c_long,
        address: ::std::os::raw::c_long,
        length: ::std::os::raw::c_long,
        rbuf: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn FLIWriteUserEEPROM(
        dev: flidev_t,
        loc: ::std::os::raw::c_long,
        address: ::std::os::raw::c_long,
        length: ::std::os::raw::c_long,
        wbuf: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_long;
}
